Action icons UI alignment correction in edit and manage contcats page.

--- a/src/app/contacts/edit-contacts/edit-contacts.component.css
+++ b/src/app/contacts/edit-contacts/edit-contacts.component.css
@@ -1,9 +1,24 @@
-.show-more{
-	display: table-row;
-}
-
-.sweet-alert{
-	width:300px;
-	font-weight: 100px;
-	font-size: 16px;
-}
+a.disabled{pointer-events:none;cursor:not-allowed}
+.pagination{margin:10px 4px 1px}
+.tabbable-custom{box-shadow:0 0 5px rgba(0,0,0,.4)!important}
+.textWhite{color:#fff}
+a.disabled{pointer-events:none;cursor:not-allowed}
+.textCss{background-color:rgba(0,0,0,0.12);bottom:-2px;height:1px;left:13px;margin:0;padding:0;width:91%}
+.capitalize{text-transform:capitalize}
+.alert-dismissible .close{top:13px;right:10px}
+.alert-success,.alert-danger,.alert-warning{color:#fff;border-radius:0}
+.alert-success{background-color:#77bf81}
+.alert-danger{background-color:#ec6262}
+.alert-warning{background-color:#f1d43b}
+.alert{padding:6px}
+.alert-success,.alert-danger,.alert-warning>h5{font-size:14px}
+.page-breadcrumb div{visibility:hidden}
+.page-breadcrumb:hover div{visibility:visible}
+.show-more{display:table-row}
+.sweet-alert{width:300px;font-weight:100px;font-size:16px}
+.actions-block {float:right;}
+.actions-block a{border: 1px solid #e7e6e3;padding: 3px;margin-right: 5px;width: 32px;height: 32px;display: block;float: left;color: #5bb2f5;text-decoration: none;}
+.actions-block a:nth-child(2){color: #ff0000;}
+.actions-block i{font-size: 20px;    text-align: center;vertical-align: middle;display: block;margin-top: 5px;}
+.actions-block a:hover{border: 1px solid #5bb2f5; background: #5bb2f5;color: #FFF;}
+.actions-block a:nth-child(2):hover{background-color: #ff0000;border: 1px solid #ff0000;}
